--- a/package.json
+++ b/package.json
@@ -7,32 +7,34 @@
     "build": "next build",
     "start": "next start",
     "test": "jest --watchAll",
-    "coverage": "jest --coverage"
+    "coverage": "jest --coverage",
+    "slicemachine": "start-slicemachine"
   },
   "dependencies": {
-    "@prismicio/client": "^6.4.3",
-    "@prismicio/helpers": "^2.3.0",
+    "@prismicio/client": "^6.7.3",
+    "@prismicio/helpers": "^2.3.9",
     "@prismicio/next": "^0.1.2",
-    "@prismicio/react": "^2.3.0",
-    "@prismicio/types": "^0.1.27",
+    "@prismicio/react": "^2.5.2",
+    "@prismicio/slice-simulator-react": "^0.2.3",
+    "@prismicio/types": "^0.2.7",
     "date-fns": "^2.19.0",
-    "next": "10.0.7",
-    "prismic-dom": "^2.2.5",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-icons": "^4.2.0",
+    "next": "13.2.1",
+    "prismic-dom": "^2.2.7",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
     "whatwg-fetch": "^3.6.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
-    "@types/node": "^14.14.31",
+    "@types/node": "^18.14.2",
     "@types/prismic-dom": "^2.1.1",
-    "@types/react": "^17.0.2",
+    "@types/react": "^18.0.28",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
     "@typescript-eslint/parser": "^4.16.1",
     "babel-jest": "^26.6.3",
-    "eslint": "^7.21.0",
+    "eslint": "^8.35.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.1.0",
     "eslint-import-resolver-typescript": "^2.4.0",
@@ -47,7 +49,8 @@
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
     "sass": "^1.32.8",
+    "slice-machine-ui": "^0.7.1",
     "ts-node": "^9.1.1",
-    "typescript": "^4.2.2"
+    "typescript": "^4.9.5"
   }
 }
